# Guardian-Server-Manager

./: .env.example  .gitignore  API_SETUP.md  BUILD_AND_INSTALL.md  BUILD_INSTRUCTIONS.md  Cargo.toml  DESKTOP_APP_README.md  DEVELOPMENT.md  Dockerfile.backend  Dockerfile.frontend  ERROR_HANDLING_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  INSTALLER_SETUP.md  New Text Document (2).txt  PRODUCTION_FIXES_SUMMARY.md  PRODUCTION_READINESS_CRITERIA.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCTION_README.md  PRODUCTION_SUMMARY.md  QUICK_START.md  README.md  Setup-Guardian-Shortcuts.bat  TESTING_GUIDE.md  Update-Shortcut.bat  build-and-install.ps1  build-final.ps1  build-installers-with-backend.ps1  build-production-final.ps1  build-production.ps1  build-simple.ps1  cleanup-repo.ps1  create-installer.ps1  create-simple-installer.ps1  cursor.rules  cursor_discussing_minecraft_server_mana.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  fix_errors.py  init_db.rs  (+17 more)
.cursor/plans/: codebase-issues-fix-plan-9647851d.plan.md
.cursorrules/: agent_roamer.md  master_workflow.md
.github/workflows/: ci.yml  production-deploy.yml
configs/: hostd.yaml  rules.yaml  server.yaml
docker/: Dockerfile.backend  Dockerfile.minecraft
docs/: API_REFERENCE.md  API_SETUP.md  APP_ARCHITECTURE_PLAN.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_SUMMARY.md  BUILD_INSTRUCTIONS.md  BUILD_README.md  FINAL_STEP_GUIDE.md  IMPLEMENTATION_PLAN.md  LAUNCHERS_README.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_FIXES_SUMMARY.md  QA.md  ROAMING_REPORT.md  SECURITY_NOTES.md  TODO.md  TODO_NEXT.md  TOOLS_README.md  USER_GUIDE.md
docs/ai-logs/: DEVLOG.md  ENDPOINT_INVENTORY.md  FINAL_REPORT.md  FIXLOG.md  ROAMING_LOG.md  SMOKE_RESULTS.md  VERIFICATION_REPORT.md
docs/api/: openapi.yaml
gpu-worker/: Cargo.toml  Dockerfile  gpu-error.txt  gpu-error2.txt  gpu-error3.txt  gpu-error4.txt  gpu-error5.txt  gpu-error6.txt  gpu-output.txt  gpu-output2.txt  gpu-output3.txt  gpu-output4.txt  gpu-output5.txt  gpu-output6.txt  gpu-output7.txt
gpu-worker/src/: ffi.rs  lib.rs  main.rs
gpu-worker/src/kernels/: chunk_generator.wgsl  density.rs  density.wgsl  mask.rs  mask.wgsl  mod.rs
guardian-agent/: build.gradle.kts  gradle.properties  settings.gradle.kts  test-gradle.bat
guardian-ui/: .gitignore  Dockerfile  MIGRATION.md  PERF_NOTES.md  build-output.txt  components.json  package-lock.json  package.json  server-structure.md  tailwind.config.js  tsconfig.app.json
guardian-ui/src/: App.tsx  TestComponent.tsx  main.tsx
guardian-ui/src-tauri/: Cargo.toml  nsis-installer.nsi  tauri.conf.json  wix-installer.wxs
guardian-ui/src-tauri/capabilities/: default.json
guardian-ui/src-tauri/configs/: hostd.yaml  server.yaml  test.yaml
guardian-ui/src-tauri/src/: commands.rs  dto.rs  events.rs  gpu_integration.rs  lib.rs  test_logging.rs
hostd/: Cargo.toml  Dockerfile  Dockerfile.production  PRODUCTION_README.md  create_db.rs  docker-compose.production.yml  init_db.rs  server_output.txt  test_db.rs
hostd/.github/workflows/: ci-cd.yml
hostd/configs/: production.yaml
hostd/data/: mod_incompatibilities.json
hostd/db/migrations/: 001_initial_schema.sql  002_mod_metadata.sql
hostd/hostd/hostd/: create_db.sql
hostd/monitoring/: prometheus.yml
hostd/monitoring/grafana/datasources/: prometheus.yml
hostd/scripts/: deploy-production.sh
hostd/src/: ai.rs  api.rs  auth.rs  backup.rs  backup_manager.rs  boot.rs  community.rs  compatibility.rs  compatibility_analyzer.rs  compatibility_engine.rs  compliance.rs  config.rs  config_validation.rs  console_streamer.rs  contracts.rs  database.rs  deployment.rs  error.rs  gpu_manager.rs  health.rs  hot_import.rs  lib.rs  lighting.rs  main.rs  main_new.rs  metrics.rs  metrics_collector.rs  minecraft.rs  mod_classification.rs  mod_management.rs  mod_manager.rs  modpack_installer.rs  performance.rs  performance_telemetry.rs  plugin.rs  pregeneration.rs  process.rs  rcon.rs  snapshot.rs  tenant.rs  (+6 more)
hostd/src/core/: app_state.rs  auth.rs  caching.rs  config.rs  crash_watchdog.rs  credential_manager.rs  error_handler.rs  file_manager.rs  guardian_config.rs  logging.rs  middleware.rs  mod.rs  monitoring.rs  performance.rs  port_registry.rs  process_manager.rs  resource_monitor.rs  retry.rs  retry_backoff.rs  scheduler.rs  security.rs  server_manager.rs  shutdown.rs  test_harness.rs  validation.rs  websocket.rs
hostd/src/database/: production.rs
hostd/src/external_apis/: curseforge.rs  mod.rs  mod_provider.rs  modrinth.rs
hostd/src/loaders/: fabric.rs  forge.rs  installer.rs  mod.rs  quilt.rs
hostd/src/middleware/: validation.rs
hostd/src/monitoring/: metrics.rs  mod.rs
hostd/src/performance/: optimization.rs
hostd/src/routes/: auth.rs  import.rs  metrics.rs  mod.rs  modpack.rs  pregen.rs  util.rs  world.rs
hostd/src/security/: auth.rs  cors.rs  encryption.rs  headers.rs  input_sanitization.rs  middleware.rs  mod.rs  path_sanitizer.rs  rate_limiting.rs  secret_storage.rs  validation.rs
hostd/src/testing/: integration.rs  mod.rs
hostd/tests/: api_smoke_tests.rs  e2e_tests.rs  integration_tests.rs  performance_tests.rs  security_tests.rs  unit_tests.rs
hostd/tests/common/: mod.rs
k8s/: backend-deployment.yaml  frontend-deployment.yaml  namespace.yaml
launchers/: README.md  create-desktop-shortcut.ps1  start-guardian-with-backend.bat  start-guardian-with-backend.ps1  update-desktop-shortcut.ps1
scripts/: build-all.ps1  build-desktop.ps1  build-production.ps1  cleanup.ps1  deploy.ps1  deploy.sh  dev-desktop.ps1  run-tests.ps1  simple-test.ps1  smoke.ps1  smoke.sh  start-backend.ps1  test-build.ps1  test-fixed.ps1  test-production.ps1  test.bat  test.ps1  test.sh
scripts/deploy/: deploy.ps1
scripts/test/: smoke.ps1  test-zero-downtime.ps1
tests/: e2e.rs  integration_tests.rs
tools/: README.md  build-custom-installer.ps1  cleanup-guardian.ps1  guardian-custom-installer.nsi
(+151 files in other folders)
