[package]
name = "hostd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
prometheus = "0.13"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
nix = "0.27"
libc = "0.2"
notify = "6.0"
jsonwebtoken = "9.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
validator = { version = "0.16", features = ["derive"] }
zip = "0.6"
rand = "0.8"
regex = "1.0"
lazy_static = "1.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
tempfile = "3.0"
sha1 = "0.10"
