[package]
name = "hostd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "tokio", "http1", "ws"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
once_cell = "1.19"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
libloading = "0.8" # for minimal GPU probe on Windows
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.20"
futures = "0.3"
nix = "0.27"
libc = "0.2"
notify = "6.0"
jsonwebtoken = "9.0"
hmac = "0.12"
sha2 = "0.10"
validator = { version = "0.16", features = ["derive"] }
rand = "0.8"
regex = "1.0"
lazy_static = "1.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
tempfile = "3.0"
sha1 = "0.10"
gpu-worker = { path = "../gpu-worker" }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
prometheus = "0.13"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde_yaml = "0.9"
sysinfo = "0.30"
zip = "0.6"
toml = "0.8"
argon2 = "0.5"
fastrand = "2.0"
base64 = "0.22"
aes-gcm = "0.10"
dotenv = "0.15"
async-trait = "0.1"
cron = "0.12"
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["util"] }

[[bin]]
name = "hostd"
path = "src/main.rs"

[[bin]]
name = "init_db"
path = "init_db.rs"

[[bin]]
name = "test_db"
path = "test_db.rs"

[[bin]]
name = "create_db"
path = "create_db.rs"